--- a/css/zbay-v2.webflow.css
+++ b/css/zbay-v2.webflow.css
@@ -149,6 +149,18 @@ a:hover {
   flex-direction: column;
 }
 
+.copy-left { 
+  display: inline-block; 
+  text-align: right; 
+  margin: 0px; 
+  -moz-transform: scaleX(-1); 
+  -o-transform: scaleX(-1); 
+  -webkit-transform: scaleX(-1); 
+  transform: scaleX(-1); 
+  filter: FlipH; 
+  -ms-filter: "FlipH"; 
+}
+
 .zb-hero__desc-cont {
   display: -webkit-box;
   display: -webkit-flex;
