--- a/css/zbay-v2.webflow.css
+++ b/css/zbay-v2.webflow.css
@@ -621,7 +621,7 @@ a:hover {
 }
 
 .zb-warning-text {
-  color: #b3b3b3;
+  color: #5a5a5a;
   font-size: 14px;
   line-height: 14px;
   font-weight: 300;
